# explicit-error

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  rust.yml
explicit-error/: Cargo.toml  README.md
explicit-error-bin/: Cargo.toml
explicit-error-bin/src/: lib.rs
explicit-error-derive/: Cargo.toml
explicit-error-derive/src/: actix.rs  domain.rs  error.rs  http.rs  lib.rs
explicit-error-exit/: Cargo.toml  README.md
explicit-error-exit/src/: domain.rs  error.rs  lib.rs
explicit-error-http/: Cargo.toml  README.md
explicit-error-http-derive/: Cargo.toml
explicit-error-http-derive/src/: actix.rs  lib.rs
explicit-error-http/examples/: actix.rs  axum.rs
explicit-error-http/src/: actix.rs  domain.rs  error.rs  handler.rs  http.rs  lib.rs
explicit-error-http/src/domain/: test.rs
explicit-error-http/src/error/: bug.rs  domain.rs  test.rs
explicit-error-http/tests/: derive.rs
explicit-error-http/tests/actix/: mod.rs
explicit-error-http/tests/axum/: mod.rs
explicit-error/examples/: actix.rs
explicit-error/src/: actix.rs  bug.rs  domain.rs  error.rs  errors.rs  fault.rs  handler.rs  http.rs  lib.rs
explicit-error/src/error/: bug.rs  data.rs  domain.rs  test.rs
explicit-error/src/fault/: test.rs
