[package]
edition = "2024"
name = "explicit-error-http"
version = "0.1.0"

[features]
actix-web = ["dep:actix-web", "explicit-error-http-derive/actix-web"]
default = ["actix-web"]

[dependencies]
actix-web = {version = "4.10.2", default-features = false, optional = true}
erased-serde = "0.4.6"
explicit-error = {path = "../explicit-error"}
explicit-error-http-derive = {path = "../explicit-error-http-derive"}
http = "1.3.1"
problem_details = "0.8.0"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
actix-web = "4.10.2"
env_logger = "0.11.8"
log = "0.4.27"
sqlx = "0.8.3"

[[example]]
name = "actix"
required-features = ["actix-web"]
