[package]
authors = ["Tristan Germain <ge.tristan@gmail.com>"]
categories = ["rust-patterns"]
description = "Explicit concrete Error type for binary crates"
documentation = "https://docs.rs/explicit-error"
edition = "2024"
keywords = ["error", "error-handling"]
license = "Apache-2.0"
name = "explicit-error"
repository = "https://github.com/Tipnos/explicit-error"
version = "0.1.2"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}

[dev-dependencies]
actix-web = "4.10.2"
explicit-error-exit = {path = "../explicit-error-exit"}
explicit-error-http = {path = "../explicit-error-http"}
http = "1.3.1"
problem_details = "0.8.0"
sqlx = "0.8.3"
